--- a/app/src/main/res/layout/dialog_select_area.xml
+++ b/app/src/main/res/layout/dialog_select_area.xml
@@ -19,6 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/content_description_close"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:onClick="@{() -> jusoVm.clickClose()}"
             android:padding="10dp"
             android:src="@drawable/baseline_close_24"
@@ -28,8 +29,10 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_margin="10dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="6dp"
+            android:layout_marginEnd="6dp"
             app:layout_constraintBottom_toTopOf="@+id/btn_dialog_select"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
