--- a/app/src/main/res/layout/item_dialog_select_place.xml
+++ b/app/src/main/res/layout/item_dialog_select_place.xml
@@ -11,17 +11,17 @@
 
     <ToggleButton
         android:id="@+id/tv_item"
-        android:layout_width="120dp"
-        android:layout_height="70dp"
-        android:layout_margin="2dp"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_margin="1.2dp"
         android:clickable="false"
         android:gravity="center"
-        android:padding="5dp"
+        android:padding="3dp"
         android:text="@{place}"
         android:textOn="@{place}"
         android:textOff="@{place}"
         android:background="@drawable/list_selector"
-        android:textSize="16dp"
+        android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
