--- a/app/src/main/res/layout/item_forecast_time_data.xml
+++ b/app/src/main/res/layout/item_forecast_time_data.xml
@@ -46,14 +46,19 @@
                 android:id="@+id/tv_item_forecast_daily_TPR"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginStart="14dp"
-                android:text="@{daily.t3h}" />
+                android:text="@{daily.t3h}"
+                android:textSize="15dp"
+                tools:ignore="SpUsage" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:text="@string/symbol_celsius" />
+                android:layout_marginStart="1.5dp"
+                android:text="@string/symbol_celsius"
+                android:textSize="15dp"
+                tools:ignore="SpUsage" />
         </LinearLayout>
 
         <LinearLayout
@@ -72,14 +77,20 @@
                 android:id="@+id/tv_item_forecast_daily_POP"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginStart="14dp"
-                android:text="@{daily.pop}" />
+                android:text="@{daily.pop}"
+                android:textSize="15dp"
+                tools:ignore="SpUsage" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/symbol_percent" />
+                android:layout_marginStart="1.5dp"
+                android:text="@string/symbol_percent"
+                android:textSize="15dp"
+                tools:ignore="SpUsage" />
         </LinearLayout>
 
         <LinearLayout
@@ -98,14 +109,20 @@
                 android:id="@+id/tv_item_forecast_daily_REH"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginStart="14dp"
-                android:text="@{daily.reh}" />
+                android:text="@{daily.reh}"
+                android:textSize="15dp"
+                tools:ignore="SpUsage" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/symbol_percent" />
+                android:layout_marginStart="1.5dp"
+                android:text="@string/symbol_percent"
+                android:textSize="15dp"
+                tools:ignore="SpUsage" />
         </LinearLayout>
 
         <LinearLayout
@@ -117,26 +134,38 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/WCT" />
+                android:layout_gravity="center"
+                android:text="@string/WCT"
+                android:textSize="15dp"
+                tools:ignore="SpUsage" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
-                android:text="@string/symbol_colon" />
+                android:text="@string/symbol_colon"
+                android:textSize="15dp"
+                tools:ignore="SpUsage" />
 
             <TextView
                 android:id="@+id/tv_item_forecast_daily_WCT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{daily.wct}" />
+                android:layout_gravity="center"
+                android:text="@{daily.wct}"
+                android:textSize="15dp"
+                tools:ignore="SpUsage" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:text="@string/symbol_celsius" />
+                android:layout_gravity="center"
+                android:layout_marginStart="1.5dp"
+                android:text="@string/symbol_celsius"
+                android:textSize="15dp"
+                tools:ignore="SpUsage" />
         </LinearLayout>
     </LinearLayout>
 </layout>
