--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,4 +1,4 @@
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -16,8 +16,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="기본 설정"
-            android:textSize="24dp" />
+            android:text="@string/title_default_setting"
+            android:textSize="24dp"
+            tools:ignore="SpUsage" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,15 +30,16 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:text="내위치 날씨 보기 사용"
-                android:textSize="17dp" />
+                android:text="@string/text_agree_my_location"
+                android:textSize="17dp"
+                tools:ignore="SpUsage" />
 
             <Switch
                 android:id="@+id/sw_use_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:checked="@={settingVm.useLocation}"
-                android:layout_gravity="center" />
+                android:layout_gravity="center"
+                android:checked="@={settingVm.useLocation}" />
         </LinearLayout>
 
     </LinearLayout>
