--- a/app/src/main/res/layout/dialog_progress.xml
+++ b/app/src/main/res/layout/dialog_progress.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:background="@drawable/border_progress_dialog"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/border_progress_dialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
     <ProgressBar
@@ -22,5 +23,6 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="21dp"
             android:text="@string/info_progress"
-            android:textSize="18dp"/>
+            android:textSize="18dp"
+        tools:ignore="SpUsage" />
 </androidx.constraintlayout.widget.ConstraintLayout>
