--- a/app/src/main/res/layout/item_forecast_week_data.xml
+++ b/app/src/main/res/layout/item_forecast_week_data.xml
@@ -46,7 +46,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginBottom="12dp"
-                    android:text="오전"
+                    android:text="@string/text_am"
                     android:textSize="14dp"
                     tools:ignore="SpUsage" />
 
@@ -132,7 +132,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginBottom="12dp"
-                    android:text="오후"
+                    android:text="@string/text_pm"
                     android:textSize="14dp"
                     tools:ignore="SpUsage" />
 
