--- a/app/src/main/res/menu/add_place_delete.xml
+++ b/app/src/main/res/menu/add_place_delete.xml
@@ -5,10 +5,10 @@
     <item android:id="@+id/action_add_place"
           android:icon="@drawable/baseline_add_24"
           android:title=""
-          app:showAsAction="always" />
+          app:showAsAction="ifRoom" />
 
     <item android:id="@+id/action_remove_place"
           android:icon="@drawable/baseline_delete_24"
           android:title=""
-          app:showAsAction="always" />
+          app:showAsAction="ifRoom" />
 </menu>
