--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,10 +6,10 @@
 
     <color name="colotText">#d5d5d5</color>
 
-    <color name="colorBlue">#0080ff</color>
-    <color name="colorGreen">#33bb64</color>
-    <color name="colorYellow">#ffff66</color>
-    <color name="colorOrange">#ff8000</color>
-    <color name="colorRed">#ff0000</color>
+    <color name="colorBlue">#235dc0</color>
+    <color name="colorGreen">#17b472</color>
+    <color name="colorYellow">#f5c747</color>
+    <color name="colorOrange">#fb8944</color>
+    <color name="colorRed">#d9343c</color>
     <color name="colorWhite">#ffffff</color>
 </resources>
