--- a/app/src/main/res/drawable/border_selected.xml
+++ b/app/src/main/res/drawable/border_selected.xml
@@ -4,5 +4,5 @@
             android:width="1dp"
             android:color="#dddddd"/>
     <solid
-            android:color="@color/colorAccent"/>
+            android:color="@color/colorSelected"/>
 </shape>
