--- a/app/src/main/res/layout/widget_weather.xml
+++ b/app/src/main/res/layout/widget_weather.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="6dp"
@@ -22,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="15dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -35,6 +36,7 @@
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_gravity="center"
+                    android:layout_marginEnd="3dp"
                     android:src="@drawable/baseline_location_on_white_24" />
 
                 <TextView
@@ -68,6 +70,13 @@
                 android:textSize="21dp"
                 tools:ignore="SpUsage" />
         </LinearLayout>
+
+        <ImageView
+            android:id="@+id/iv_widget_refresh"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="top|end"
+            android:src="@drawable/baseline_refresh_white_24" />
     </LinearLayout>
 
     <TextView
