--- a/app/src/main/res/layout/widget_weather.xml
+++ b/app/src/main/res/layout/widget_weather.xml
@@ -2,8 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/lo_widget_container"
@@ -68,16 +67,43 @@
             </LinearLayout>
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_widget_dust_info"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_marginBottom="6dp"
-            android:text="@string/guide_on_time_dust"
-            android:textColor="@color/colorWhite"
-            android:textSize="16dp"
-            tools:ignore="SpUsage" />
+            android:layout_gravity="center">
+
+            <TextView
+                android:id="@+id/tv_widget_dust_info_pm10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/guide_on_time_dust_pm10"
+                android:textColor="@color/colorWhite"
+                android:textSize="16dp"
+                tools:ignore="SpUsage" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="4dp"
+                android:layout_marginEnd="4dp"
+                android:text="@string/symbol_slash"
+                android:textColor="@color/colorWhite"
+                android:textSize="16dp"
+                tools:ignore="SpUsage" />
+
+            <TextView
+                android:id="@+id/tv_widget_dust_info_pm25"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/guide_on_time_dust_pm25"
+                android:textColor="@color/colorWhite"
+                android:textSize="16dp"
+                tools:ignore="SpUsage" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tv_widget_update_time"
@@ -85,19 +111,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/guide_update_time"
+            android:drawableEnd="@drawable/baseline_refresh_white_24"
             android:textColor="@color/colorWhite"
             android:textSize="16dp"
             tools:ignore="SpUsage" />
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/iv_widget_refresh"
-        android:layout_width="43dp"
-        android:layout_height="43dp"
-        android:layout_gravity="top|end"
-        android:padding="8dp"
-        android:src="@drawable/baseline_refresh_white_24"
-        tools:ignore="ContentDescription" />
 
     <ProgressBar
         android:id="@+id/pb_widget"
