--- a/app/src/main/res/xml/widget_info_weather.xml
+++ b/app/src/main/res/xml/widget_info_weather.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:initialLayout="@layout/widget_weather"
-    android:minWidth="640dp"
+    android:initialLayout="@layout/widget_weather_vertical"
+    android:minWidth="160dp"
     android:minHeight="160dp"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="3600000"
