bug fix : widget dynamical resizing

--- a/app/src/main/res/layout/widget_weather_vertical.xml
+++ b/app/src/main/res/layout/widget_weather_vertical.xml
@@ -41,8 +41,8 @@
 
             <ImageView
                 android:id="@+id/iv_widget_sky"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
+                android:layout_width="72dp"
+                android:layout_height="72dp"
                 android:layout_gravity="center"
                 tools:ignore="ContentDescription" />
 
@@ -51,11 +51,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:drawableTop="@drawable/baseline_location_on_white_24"
+                android:drawableTop="@drawable/baseline_location_on_white_18"
                 android:gravity="center"
                 android:text="@string/guide_place_name"
                 android:textColor="@color/colorWhite"
-                android:textSize="24dp"
+                android:layout_marginBottom="3dp"
+                android:textSize="18dp"
                 tools:ignore="SpUsage" />
 
             <TextView
