--- a/app/src/main/res/layout/widget_weather.xml
+++ b/app/src/main/res/layout/widget_weather.xml
@@ -36,7 +36,7 @@
                 <TextView
                     android:id="@+id/tv_widget_address"
                     android:layout_width="wrap_content"
-                    android:layout_height="43dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:drawableStart="@drawable/baseline_location_on_white_24"
                     android:gravity="center"
